# AI-Connect

./: .gitignore  CHANGELOG.md  README.md  README_DE.md  REDDIT_POST.md  chat_viewer.py  config.yaml  install-client.sh  install.sh  pyproject.toml
.github/traffic/: traffic.jsonl
client/: __init__.py  bridge_client.py  http_server.py  server.py  tools.py
docs/: vscode-mcp-config.json
hooks/: inject_messages.py
polkit/: 50-ai-connect.rules
server/: __init__.py  main.py  message_store.py  peer_registry.py  websocket_server.py
skills/advisor/: SKILL.md
systemd/: ai-connect-mcp.service
