[tool.poetry]
name = "ai-connect"
version = "0.1.0"
description = "MCP-based communication bridge between AI coding assistants"
authors = ["mp"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "^2.0"
websockets = "^12.0"
aiosqlite = "^0.19.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
ai-connect-server = "server.main:main"
ai-connect-mcp = "mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
